overflow issue on smaller screens with container

--- a/doggy_dates/static/css/styles.css
+++ b/doggy_dates/static/css/styles.css
@@ -131,4 +131,7 @@ body {
         width: 25% !important;
         display: inline-block !important;
     }
+    .container {
+        overflow: scroll;
+    }
 }
